# stormCastle

./: CMakeLists.txt  build.sh  build_direct.sh  index.html
assets/images/: bad_scribble_1.aseprite  characters.aseprite  tiles.aseprite
shaders/: dbg_path.fs  dbg_path.vs  simple.fs  simple.instanced.fs  simple.instanced.vs  simple.vs  text.fs
src/: CMakeLists.txt  characters.h  controller.h  display.h  ecs.cpp  ecs.h  gl_headers.h  io.cpp  io.h  level.h  main.cpp  object.cpp  object_factory.cpp  object_factory.h  shaders.cpp  shaders.h  state_machine.h  systems.h  tools.cpp  tools.h  types.h
